@startuml

title __PROJECTJJA's Class Diagram__\n

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class Cancel {
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      class Clock {
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      class Controller {
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      class DetailVisitor {
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      class Developer {
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      interface Entity {
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class FormSection {
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      class ImportExportException {
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class InfoSection {
        }
      }
    }
  }
  

  package taskman {
    class Initiator {
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class MenuSection {
        }
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        interface MethodCall {
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      class OperationNotPermittedException {
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      class Project {
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      class ProjectManager {
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      class ProjectOrganizer {
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        abstract class Section {
        }
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class SelectionSection {
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class Task {
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        abstract class TaskState {
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStateExecuting {
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStateFailed {
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStateFinished {
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStateInactive {
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      class TimeParser {
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      class TimeSpan {
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class TitleDecoratorSection {
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      abstract class User {
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      class UserInterface {
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      class UserManager {
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      interface Visitor {
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      class XmlObject {
      }
    }
  }
  

  Clock -up-|> Entity
  Controller o-- Clock : clock
  Controller o-- UserManager : userManager
  Controller o-- ProjectOrganizer : projectOrganizer
  DetailVisitor -up-|> Visitor
  Developer -up-|> User
  FormSection -up-|> Section
  InfoSection -up-|> Section
  MenuSection -up-|> Section
  MenuSection o-- SelectionSection : selectionSection
  Project -up-|> Entity
  ProjectManager -up-|> User
  SelectionSection -up-|> Section
  Task -up-|> Entity
  Task o-- TimeSpan : timeSpan
  Task o-- TaskState : state
  Task o-- Task : alternative
  TaskStateExecuting -up-|> TaskState
  TaskStateFailed -up-|> TaskState
  TaskStateFinished -up-|> TaskState
  TaskStateInactive -up-|> TaskState
  TimeSpan -up-|> Entity
  TitleDecoratorSection -up-|> Section
  TitleDecoratorSection o-- Section : section
  User -up-|> Entity
  UserInterface o-- Controller : controller
  UserManager o-- User : currentUser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
